tests/fixtures/errors/duplicate.ksr
// Duplicate name: x is declared twice
param x = 1.0;
param x = 2.0;
